# ffmpeg_audio_player

ffmpeg_audio_playback/: CMakeLists.txt
ffmpeg_audio_playback/include/: AudioPlayer.hpp  Frame.hpp  InputFile.hpp  OutputDevice.hpp  Packet.hpp  Resampler.hpp  av_err2str.hpp
ffmpeg_audio_playback/src/: AudioPlayer.cpp  Frame.cpp  InputFile.cpp  OutputDevice.cpp  Packet.cpp  Resampler.cpp  main.cpp
